Refactor database operations to use CompletableFuture. Remove unused imports and optimize code for better performance.
Detailed Description:
- Replaced synchronous database operations with CompletableFuture for insert, update, and delete methods in ChestDAOImpl.
- Removed unused imports like Track, Data, Season from various classes.
- Cleaned up InventoryUtils by optimizing the code for setting item lore using List.of().